--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,22 +1,19 @@
 .footer {
   background-color: #212ea0;
   color: white;
-  padding: 2.5rem 2.5rem 1rem 2.5rem;
+  padding: 2.5rem;
 }
 
 .footer-container {
   display: flex;
-}
-
-.footer-container-md {
-  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .footer-1 {
   display: flex;
   gap: 20px;
-  width: 40%;
+  flex: 1 1 100%; 
 }
 
 .footer-1 img {
@@ -24,13 +21,19 @@
 }
 
 .footer-half {
-  width: 60%;
+  flex: 1 1 100%; /* Full width on small screens */
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
 
 .footer-2 {
-  width: 25%;
+  text-decoration: none;
+  margin-left: 10px;
+  flex: 1 1 20%; 
+  min-width: 200px;
+  justify-content: space-evenly;
 }
 
 .footer-title {
@@ -56,35 +59,30 @@
   cursor: pointer;
 }
 
-.footer-link a{
+.footer-link a {
   text-decoration: none;
   color: white;
 }
 
 .footer-icons {
   display: flex;
-  gap: 1rem;
-  justify-content: center;
-  margin-top: 1rem;
-  margin-right: 7rem;
+  gap: 0.5rem; 
   font-size: x-large;
 }
 
-.footer-icons i {
+.footer-icons i, .footer-icons .github, .footer-icons .x {
   color: white;
-  transition: color 0.3s, font-size 0.3s;
+  transition: transform 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.footer-icons i:hover {
-  font-size: 2rem;
+.footer-icons i:hover, .footer-icons .github:hover, .footer-icons .x:hover {
+  transform: scale(1.3) translateY(-5px);
+  color: #dfda42; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .footer-icons a {
   text-decoration: none;
-}
-
-.footer-icons-md {
-  justify-content: flex-end;
 }
 
 .footer-bottom {
@@ -99,74 +97,79 @@
   cursor: pointer;
 }
 
-.footer-sections {
-  display: flex;
+@media (min-width: 700px) {
+  .footer-container {
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .footer-2 {
+    text-align: left;
+    justify-content: space-evenly;
+    
+  }
+
+  .footer-icons {
+   
+    margin-top: 0;
+  }
+
+
+  .footer-1 {
+    justify-content: space-between;
+  }
 }
 
-.profileContainer a {
-  text-decoration: none;
-}
-
-.footer-title a {
-  text-decoration: none;
-}
-
-@media (max-width: 768px) {
+@media (max-width: 699px) {
   .footer-container {
     flex-direction: column;
-    gap: 3rem;
+    gap: 1rem;
   }
 
   .footer-1 {
     width: 100%;
     text-align: left;
-    margin-bottom: 0;
+    justify-content: center;
   }
 
   .footer-half {
     width: 100%;
     justify-content: space-between;
+    gap: 1rem;
   }
 
   .footer-2 {
-    width: 20%;
+    justify-content: space-evenly;
+    width: 100%;
+    text-align: center;
   }
 
   .footer-icons {
-    margin-right: 5rem;
-    justify-content: flex-end;
+    justify-content: center;
+    margin-top: 1rem;
   }
 
   .footer-bottom {
-    justify-content: space-between;
-  }
-
-  .footer-bottom {
-    display: flex;
-    margin-top: 10px;
-    justify-content: left;
+    justify-content: center;
   }
 }
 
 @media (max-width: 400px) {
   .footer-half {
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   .footer-2 {
     width: 100%;
+    justify-content: space-evenly;
   }
 
   .footer-icons {
-    margin-right: 0;
-    display: flex;
     justify-content: center;
   }
 
   .footer-bottom {
-    display: flex;
-    margin-top: 10px;
     justify-content: center;
   }
 }
