--- a/src/Pages/slider.css
+++ b/src/Pages/slider.css
@@ -1,3 +1,6 @@
+@import url('//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css');
+@import url('//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css');
+
 .Slide {
     text-align: center;
   }
