--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -72,13 +72,13 @@
 
 .footer-icons i, .footer-icons .github, .footer-icons .x {
   color: white;
-  transition: transform 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.3s ease, color 0.3s ease;
 }
 
 .footer-icons i:hover, .footer-icons .github:hover, .footer-icons .x:hover {
   transform: scale(1.3) translateY(-5px);
   color: #dfda42; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
 }
 
 .footer-icons a {
