Fixed the outline issue and centered the know more

--- a/src/Pages/Explore.css
+++ b/src/Pages/Explore.css
@@ -41,7 +41,7 @@
   }
   
   .card {
-    border: 1px solid #ddd;
+    border: none;
     background-size: cover;
     border-radius: 8px;
     overflow: hidden;
@@ -84,19 +84,19 @@
   .button-container {
     margin-top: auto;
     display: flex;
-    justify-content: flex-end;
+    justify-content:center
   }
 .btn{
   background-color: rgb(206 152 206)
 }
 .btn:hover{
     color:rgb(17, 1, 1);
-    background-color: rgb(129, 166, 235);
+    background-color: rgb(242, 177, 177);
     text-decoration: none;
 }
-.card:hover{
+ .card:hover{
     background-color:rgb(211, 183, 211);
-}
+} 
 
 /* Explore.css */
 .explore {
