--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,14 @@
     background-color: black;
     color: white;
 }
+
+nav1{
+  padding: 10px 15px;
+  border-radius: 15px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+nav1:hover{
+  background-color: transparent; /* Background color on hover */
+  color: black; /* Text color on hover */
+}
