--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,7 +2,9 @@
   padding-left: 10%;
   padding-right: 10%;
 }
-nav{
+
+
+nav{ 
   width: 100%;
    background: rgba(0, 0, 128,.6);
   color: #fff;
@@ -35,6 +37,21 @@ nav ul li{
 nav ul li a.active{
   color: lightgoldenrodyellow;
 }
+
+nav a {
+  color : #212EA0
+  transition : color 0.3s ease;
+}
+nav a:hover {
+   
+  background-color: rgb(109, 65, 151); /* Background color on hover */
+  background-size: 80% 80%;
+  color: black;
+  border-radius: 3px ;
+
+}
+
+
 .dark-nav{
   background: #212EA0;
   transition: 0.5s;
