--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,10 +6,7 @@
 
 .footer-container {
   display: flex;
-}
-
-.footer-container-md {
-  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -26,6 +23,7 @@
 .footer-half {
   width: 60%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 
@@ -56,7 +54,7 @@
   cursor: pointer;
 }
 
-.footer-link a{
+.footer-link a {
   text-decoration: none;
   color: white;
 }
@@ -64,9 +62,7 @@
 .footer-icons {
   display: flex;
   gap: 1rem;
-  justify-content: center;
   margin-top: 1rem;
-  margin-right: 7rem;
   font-size: x-large;
 }
 
@@ -84,7 +80,7 @@
 }
 
 .footer-icons-md {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .footer-bottom {
@@ -101,6 +97,7 @@
 
 .footer-sections {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .profileContainer a {
@@ -129,22 +126,17 @@
   }
 
   .footer-2 {
-    width: 20%;
+    width: 45%;
+    margin-bottom: 2rem;
   }
 
   .footer-icons {
-    margin-right: 5rem;
-    justify-content: flex-end;
+    margin-right: 0;
+    justify-content: flex-start;
   }
 
   .footer-bottom {
-    justify-content: space-between;
-  }
-
-  .footer-bottom {
-    display: flex;
-    margin-top: 10px;
-    justify-content: left;
+    justify-content: center;
   }
 }
 
@@ -159,14 +151,13 @@
   }
 
   .footer-icons {
-    margin-right: 0;
-    display: flex;
     justify-content: center;
   }
+}
 
-  .footer-bottom {
-    display: flex;
-    margin-top: 10px;
-    justify-content: center;
+@media (min-width: 769px) {
+  .footer-icons {
+    justify-content: flex-start;
+    margin-right: 0;
   }
 }
