Conflits are solved

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@
     color: #141726 !important;
 }
     
-#dark {
+.dark {
     background-color:#141726 !important;
     border-color: #2D3135 !important;
     color: white !important;
