--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,12 +1,10 @@
-.container1{
+.container1 {
   padding-left: 10%;
   padding-right: 10%;
 }
 
-
-nav{ 
+nav {
   width: 100%;
-  /* background: rgba(0, 0, 128,.6); */
   font-size: 14px;
   padding: 4px 0;
   position: fixed;
@@ -18,47 +16,36 @@ nav{
   z-index: 10;
   transition: top 0.3s ease-in-out;
 }
+
 nav.container1 p {
   color: #edf2f2;
   display: flex;
   align-items: center;
 }
- /* CSS for name in navbar */
-/*  .name_nav {
-  color: rgb(255, 255, 255); 
-  font-size: 2vw; 
-  position: relative;
-  bottom: 5.5vw; 
-  left: 5.5vw; 
-}
 
-/* Media query for smaller screens */
-/*@media (max-width: 768px) {
-  .name_nav {
-    font-size: 4vw;
-    bottom: 8vw;
-    left: 6vw;
-  }
-} */
 .logo {
   height: 52px;
   width: 52px;
   margin-right: 5px;
 }
-.logIn{
-/* background-color: rgb(145, 99, 187); */
-background-color: transparent;
+
+.logIn {
+  background-color: transparent;
 }
-.logIn:hover{
-background-color: rgb(109, 65, 151);
+
+.logIn:hover {
+  background-color: rgb(109, 65, 151);
 }
-nav ul li{
+
+nav ul li {
   display: inline-block;
   list-style: none;
   margin: 5px 20px;
   font-size: 14px;
+  transition: all 0.3s ease;
 }
-nav ul li a.active{
+
+nav ul li a.active {
   color: lightgoldenrodyellow;
 }
 
@@ -70,43 +57,67 @@ nav a {
   display: flex;
   flex-direction: row-reverse;
 }
-nav a:hover {
 
-  background-color: rgb(109, 65, 151); /* Background color on hover */
+nav a:hover {
+  background-color: rgb(109, 65, 151);
   background-size: 80% 80%;
   color: black;
-  border-radius: 3px ;
-}
-.dark-nav{
-  /* background: #212EA0; */
-  transition: 0.5s;
-}
-.hidden-nav {
-  top: -100px; /* Adjust this value to hide the navbar completely */
+  border-radius: 3px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.menu-icon{
+nav ul li a {
+  position: relative;
+  display: inline-block;
+  padding: 5px;
+  transition: color 0.3s ease;
+}
+
+nav ul li a::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: lightgoldenrodyellow;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+
+nav ul li a:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+.dark-nav {
+  transition: 0.5s;
+}
+
+.hidden-nav {
+  top: -100px;
+}
+
+.menu-icon {
   display: none;
   margin-left: 15px;
 }
 
-
-/* Media query for tablets */
-@media(max-width: 1100px){
-  nav ul li{
-      margin: 10px 10px;
-      font-size: 14px;
+@media (max-width: 1100px) {
+  nav ul li {
+    margin: 10px 10px;
+    font-size: 14px;
   }
 }
-@media(max-width: 900px){
+
+@media (max-width: 900px) {
   nav a {
     flex-direction: column-reverse;
     align-items: center;
-  } 
+  }
 }
 
-
-/* SmartPhone Media query */
 @media (max-width: 770px) {
   nav ul li {
     margin: 10px 5px;
@@ -116,26 +127,29 @@ nav a:hover {
 
 @media (max-width: 700px) {
   nav {
-    padding: 15px 20px; /* Adjust padding for better spacing */
+    padding: 15px 20px;
   }
+
   .logo {
     width: 50px;
   }
+
   nav ul {
-    position: absolute; /* Change position to absolute */
-    top: 82.56px; /* Adjust top position */
-    right: 0px; /* Adjust right position */
-    /* background: #6261acfa; */
-    z-index: 10; /* Increase z-index to show above other content */
-    width: 200px;
-    padding-top: 20px; /* Adjust padding-top */
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background: rgba(0, 0, 128, 0.6);
+    z-index: 10;
+    width: 100%;
+    padding-top: 0;
     transition: 0.5s;
   }
 
   nav ul li {
     display: block;
-    margin: 10px 0; /* Adjust margin */
-    text-align: center; /* Center align menu items */
+    margin: 10px 0;
+    text-align: center;
+    width: 100%;
   }
 
   .menu-icon {
@@ -145,27 +159,28 @@ nav a:hover {
   }
 
   .hide-mobile-menu {
-      height: 0;
-      padding: 0;
-      overflow: hidden;
-      transition: all 0.3s ease-in-out;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
   }
 }
+
 .theme-toggle-button {
-  /* background: rgba(128, 128, 128, 0.2); Subtle grey background */
   height: 42px;
   width: 42px;
-  border: none; /* Remove border */
+  border: none;
   border-radius: 50%;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #ffffff;
-  padding: 0; /* Increase padding for larger button */
+  padding: 0;
   transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
 }
-.theme-toggle-button img{
+
+.theme-toggle-button img {
   height: 32px;
   width: 32px;
   filter: grayscale();
@@ -174,8 +189,8 @@ nav a:hover {
 
 .theme-toggle-button:hover {
   transform: scale(1.1);
-  background: rgba(128, 128, 128, 0.4); /* Darker grey on hover */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+  background: rgba(128, 128, 128, 0.4);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .theme-toggle-button:focus {
@@ -183,9 +198,9 @@ nav a:hover {
 }
 
 .theme-toggle-button box-icon {
-  width: 20px; /* Smaller icon size */
-  height: 20px; /* Smaller icon size */
-  fill: white; /* Icon color to white */
+  width: 20px;
+  height: 20px;
+  fill: white;
 }
 
 .dark-nav .theme-toggle-button {
