fixed navbar css

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -32,9 +32,9 @@
 .hero-text h1{
     font-size: 60px;
     font-weight: 600;
-    display: flex;
+    /* display: flex; */
     text-align: center;
-    width: fit-content;
+    /* width: fit-content; */
 }
 .hero-text p{
     max-width: 700px;
