--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
 
 nav {
   width: 100%;
-  /* background: rgba(0, 0, 128,.6); */
+  background-color:#212ea0; 
   font-size: 14px;
   padding: 10px 0;
   position: fixed;
