--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -56,7 +56,7 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #007bff;
 }
 
 .login-container p {
@@ -89,4 +89,17 @@ p a:hover {
   margin-bottom: 10px;
   /* justify-content: center;
   display: flex; */
+}
+.eye {
+  float: right;
+  left:-9px;
+  margin-top: -45px;
+  position: relative;
+  z-index: 2;
+  width: 14px; /*Desired width*/
+  height: 14px; /*Desired height*/
+}
+.eye:hover {
+  color: #007efc;
+  cursor: pointer;
 }
