--- a/src/Components/progressbar.css
+++ b/src/Components/progressbar.css
@@ -5,12 +5,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 8px; 
+    height: 9px; 
     z-index: 9999; 
   }
   
   .scroll-progress-bar {
     height: 100%;
-    background-color: #2d62ff; 
+    background-color: #2259ff; 
   }
   
