--- a/src/Pages/feedback.css
+++ b/src/Pages/feedback.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh; 
+  min-height: 100vh;
   padding: 20px;
   box-sizing: border-box;
 }
@@ -103,6 +103,90 @@
 
 @media (min-width: 1200px) {
   .feedback-wrapper {
-    padding: 50px; 
+    padding: 50px;
   }
+}
+
+.popup {
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+
+}
+
+
+.popup-content {
+
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+
+}
+
+
+
+.popup-close {
+  
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background: none;
+
+  border: none;
+  font-size: 14px;
+  cursor: pointer;
+
+}
+
+.popup h2 {
+
+  color: #001164;
+  font-size: 30px;
+  
+}
+
+
+/* .popup-icon {
+
+  font-size: 45px;
+  color: #4caf50;
+
+} */
+
+.popup p {
+
+  margin: 16px 0;
+  color: #666;
+
+}
+
+
+.popup-button {
+
+  background-color: #2989ffec;
+  color: white;
+  border: none;
+
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+
+}
+
+
+.popup-button:hover {
+
+  background-color: #04376e;
+
 }
