--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -8,21 +8,29 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: animate 16s ease-in-out infinite;
+    animation: animate 10s ease-in-out infinite;
 }
 
 @keyframes animate{
     0%,100%{
         background-image: url('../../assets/nile_3.jpg');
+        background-size: cover;
+        background-position: center;
     }
     25%{
         background-image: url('../../assets/5.jpg');
+        background-size: cover;
+        background-position: center;
     }
     50%{
         background-image: url('../../assets/2.jpg');
+        background-size: cover;
+        background-position: center;
     }
     75%{
         background-image: url('../../assets/nile_2.jpg');
+        background-size: cover;
+        background-position: center;
     }
 }
 .hero-text{
